Fixed progress fill overflowing in progress bars

--- a/css/elements/_progress.css
+++ b/css/elements/_progress.css
@@ -7,7 +7,7 @@
 
 
     /* Reset some bootstrap styling */
-    overflow: visible;
+    overflow: hidden;
     border-radius: 0;
 
     &.clickable {
